[project]
name = "theTop"
version = "0.1.0"
description = "Data access tookit"
authors = [
    { name = "sakesun", email = "sakesun@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
test-all = "python -m unittest discover ./src/"

[tool.hatch.metadata]
allow-direct-references = true
